--- a/src/Launcher/Stalker-CoP.vcxproj
+++ b/src/Launcher/Stalker-CoP.vcxproj
@@ -193,12 +193,10 @@
     <ResourceCompile Include="Stalker-CoP.rc">
       <PreprocessorDefinitions Condition="'$(Configuration)|$(Platform)'=='Release_COC|Win32'">
       </PreprocessorDefinitions>
-      <PreprocessorDefinitions Condition="'$(Configuration)|$(Platform)'=='Release_COC|x64'">
-      </PreprocessorDefinitions>
+      <PreprocessorDefinitions Condition="'$(Configuration)|$(Platform)'=='Release_COC|x64'">IS_COC;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <PreprocessorDefinitions Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
       </PreprocessorDefinitions>
-      <PreprocessorDefinitions Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
-      </PreprocessorDefinitions>
+      <PreprocessorDefinitions Condition="'$(Configuration)|$(Platform)'=='Release|x64'">IS_COP;%(PreprocessorDefinitions)</PreprocessorDefinitions>
     </ResourceCompile>
   </ItemGroup>
   <ItemGroup>
