+ Добавил иконку и сплэш из СоС ~ Отредактировал xrbuild

--- a/src/Launcher/Stalker-CoP.vcxproj
+++ b/src/Launcher/Stalker-CoP.vcxproj
@@ -191,11 +191,9 @@
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="Stalker-CoP.rc">
-      <PreprocessorDefinitions Condition="'$(Configuration)|$(Platform)'=='Release_COC|Win32'">
-      </PreprocessorDefinitions>
-      <PreprocessorDefinitions Condition="'$(Configuration)|$(Platform)'=='Release_COC|x64'">IS_COC;%(PreprocessorDefinitions)</PreprocessorDefinitions>
-      <PreprocessorDefinitions Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
-      </PreprocessorDefinitions>
+      <PreprocessorDefinitions Condition="'$(Configuration)|$(Platform)'=='Release_COC|Win32'">IS_CoC;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <PreprocessorDefinitions Condition="'$(Configuration)|$(Platform)'=='Release_COC|x64'">IS_CoC;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <PreprocessorDefinitions Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">IS_COP;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <PreprocessorDefinitions Condition="'$(Configuration)|$(Platform)'=='Release|x64'">IS_COP;%(PreprocessorDefinitions)</PreprocessorDefinitions>
     </ResourceCompile>
   </ItemGroup>
