more linux porting, but still build failed at 86% in xrCore

--- a/src/xrCore/CMakeLists.txt
+++ b/src/xrCore/CMakeLists.txt
@@ -309,7 +309,7 @@ set(COMMON_HEADERS
 #  ../Common/_d3d_extensions.h
 )
 
-include_directories("." ${CMAKE_SOURCE_DIR} ${SDL2_INCLUDE_DIR} ${OPENSSL_INCLUDE_DIR} ${LZO_INCLUDE_DIR})
+include_directories(${CMAKE_CURRENT_SOURCE_DIR} ${CMAKE_CURRENT_SOURCE_DIR}/.. ${CMAKE_CURRENT_SOURCE_DIR}/../../sdk/include ${CMAKE_SOURCE_DIR} ${SDL2_INCLUDE_DIR} ${OPENSSL_INCLUDE_DIR} ${LZO_INCLUDE_DIR})
 
 add_library(xrCore SHARED ${SOURCES} ${HEADERS}
     ${ANIMATION_SOURCES}
