--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,7 @@
 [submodule "Externals/luajit"]
 	path = Externals/luajit
 	url = https://github.com/q4a/LuaJIT.git
+	branch = xray
 [submodule "Externals/luabind"]
 	path = Externals/luabind
 	url = https://github.com/Xottab-DUTY/luabind-deboostified.git
