fix submodule glew: branch = build

--- a/.gitmodules
+++ b/.gitmodules
@@ -62,7 +62,8 @@
 	url = https://github.com/zeux/pugixml.git
 [submodule "Externals/glew"]
 	path = Externals/glew
-	url = https://github.com/Armada651/glew
+	url = https://github.com/Armada651/glew.git
+	branch = build
 [submodule "Externals/gli"]
 	path = Externals/gli
 	url = https://github.com/g-truc/gli.git
