--- a/appveyor.yml
+++ b/appveyor.yml
@@ -2,12 +2,9 @@ version: '{build}'
 pull_requests:
   do_not_increment_build_number: true
 skip_tags: true
-image:
-- Visual Studio 2017
-- Previous Visual Studio 2017
+image: Visual Studio 2017
 configuration:
 - Release
-- Mixed
 - Debug
 platform:
 - x86
