--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ os:
 - linux
 before_script:
   - sudo apt-get install libegl1-mesa-dev libgles2-mesa-dev
-  - sudo apt-get install cmake lua5.1-dev libssl-dev libtheora-dev libogg-dev libsdl2-dev liblzo2-dev libjpeg-dev libncurses5-dev
+  - sudo apt-get install cmake lua5.1-dev libssl-dev libogg-dev libtheora-dev libvorbis-dev libsdl2-dev liblzo2-dev libjpeg-dev libncurses5-dev
   - mkdir bin
   - cd bin
   - cmake ..
