--- a/Externals/cximage/CMakeLists.txt
+++ b/Externals/cximage/CMakeLists.txt
@@ -29,6 +29,7 @@ set(HEADERS
 	xmemfile.h
 )
 
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fpermissive --std=c++14")
 add_definitions(-DCXIMAGE_BUILD)
 
 include_directories("." ${CMAKE_SOURCE_DIR})
