--- a/appveyor.yml
+++ b/appveyor.yml
@@ -23,33 +23,12 @@ environment:
     tbs_config: Release
 install:
 - ps: >-
-    if($env:tbs_tools -eq 'mingw' -and $env:tbs_arch -eq 'x64') {
+    if($env:tbs_tools -eq 'mingw' -and $env:tbs_arch -eq 'x64xDISABLE') {
      invoke 'curl' '-L -o mw64.7z "http://libgd.blob.core.windows.net/mingw/x86_64-4.9.1-release-posix-seh-rt_v3-rev1.7z"';
      invoke '7z' 'x -oC:\ mw64.7z';
     }
 build_script:
-- git submodule update --init --recursive
-- if [%tbs_tools%]==[mingw] if [%tbs_arch%]==[Win32] (
-    SET PATH=C:\MinGW\bin;%PATH% &&
-    ECHO %cd% &&
-    ECHO *** Building %tbs_tools%\%tbs_arch% &&
-    MKDIR bin &&
-    cmake .. &&
-    make
-  )
-- if [%tbs_tools%]==[mingw] if [%tbs_arch%]==[x64] (
-    SET PATH=C:\mingw64\bin;%PATH% &&
-    ECHO %cd% &&
-    ECHO *** Building %tbs_tools%\%tbs_arch% &&
-    MKDIR bin &&
-    cmake .. &&
-    make &&
-  )
-- if [%tbs_tools%]==[msvc] (
-    ECHO %cd% &&
-    ECHO *** Building %tbs_tools%\%tbs_arch%\%tbs_config% &&
-    msbuild "src\engine.sln" /m /verbosity:minimal /property:PlatformToolset=v141 /t:Clean,Build /p:Platform=%tbs_arch% /p:Configuration=%tbs_config% /logger:"C:\Program Files\AppVeyor\BuildAgent\Appveyor.MSBuildLogger.dll"
-    )
+- cmd: "git submodule update --init --recursive &&\nif [%tbs_tools%]==[mingw] if [%tbs_arch%]==[Win32] (\n  SET PATH=C:\\MinGW\\bin;%PATH% &&\n  ECHO %cd% \n  ECHO *** Building %tbs_tools%\\%tbs_arch% &&\n  MKDIR bin &&\n  cmake .. &&\n  make\n) &&\nif [%tbs_tools%]==[mingw] if [%tbs_arch%]==[x64] (\n  SET PATH=C:\\mingw64\\bin;%PATH% &&\n  ECHO %cd% &&\n  ECHO *** Building %tbs_tools%\\%tbs_arch% &&\n  MKDIR bin &&\n  cmake .. &&\n  make &&\n) &&\nif [%tbs_tools%]==[msvc] (\n  ECHO %cd% &&\n  ECHO *** Building %tbs_tools%\\%tbs_arch%\\%tbs_config% &&\n  msbuild \"src\\engine.sln\" /m /verbosity:minimal /property:PlatformToolset=v141 /t:Clean,Build /p:Platform=%tbs_arch% /p:Configuration=%tbs_config% /logger:\"C:\\Program Files\\AppVeyor\\BuildAgent\\Appveyor.MSBuildLogger.dll\"\n)"
 test: off
 artifacts:
 - path: res/xdOpenXRay.Dx86.7z
